# witchburr

./: CMakeLists.txt  license.md  readme.md
include/witchburr/: code_block.hpp  reg.hpp  witchburr.hpp  witchburr_exception.hpp
include/witchburr/impl/: enum.hpp  imm.hpp  list.hpp  mnemonics_branch_v2.03.inc.hpp  mnemonics_integer_v2.03.inc.hpp  multi_typed_name.hpp  oaknut_exception.inc.hpp  offset.hpp  ppc64_encode_helpers.inc.hpp  reg.hpp  string_literal.hpp  witchburr_exception.inc.hpp
tests/: basic.cpp
